# lora-e5

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: credentials.rs  error.rs  lib.rs  parse.rs  process.rs  tests.rs  types.rs
src/: credentials.rs  error.rs  lib.rs  parse.rs  tests.rs  types.rs
