[package]
name = "lora-e5-cli"
version = "0.1.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "CLI tool for the SEEED LoRa-E5 module"
license = "Apache-2.0"
repository = "https://github.com/novalabsxyz/lora-e5"
readme = "README.md"
keywords = ["lora-e5", "lorawan", "seeed"]

[dependencies]
clap = { version = "4", features = ["derive"]}
hex = "0"
lora-e5 = { path = "../lib", features = ["runtime", "libudev"]}
thiserror = "1"

[dependencies.tokio]
version = "1"
default-features=false
features=["fs", "macros", "sync", "signal", "rt", "process", "time"]
