[package]
name = "lora-e5"
version = "0.1.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Tokio-based runtime and library for the SEEED LoRa-E5 module"
license = "Apache-2.0"
repository = "https://github.com/novalabsxyz/lora-e5"
readme = "README.md"
keywords = ["lora-e5", "lorawan", "seeed"]

[dependencies]
serialport = { version = "4", default-features = false }
thiserror = "1"
hex = "0"

[dependencies.tokio]
version = "1"
default-features=false
features=["fs", "macros", "sync", "signal", "rt", "process", "time"]
optional = true

[features]
default = []
libudev = ["serialport/libudev"]
runtime = ["tokio"]
